--- a/static/css/_project.scss
+++ b/static/css/_project.scss
@@ -238,16 +238,14 @@ md-list-item.list-item-with-padding {
 ._task-submissions {
     position: relative;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     height: 100%;
     //-webkit-box-shadow: 0 1px 14px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
     //-moz-box-shadow: 0 1px 14px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
     //box-shadow: 0 1px 14px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-._task-submissions:hover {
-    overflow-y: auto;
-}
 
 ._submission-wrapper {
     height: 100%;
@@ -264,14 +262,12 @@ md-list-item.list-item-with-padding {
 }
 
 ._task-list-wrapper {
-    overflow: hidden;
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
-}
-
-._task-list-wrapper:hover {
     overflow-y: auto;
 }
+
 
 ._submission-header {
     padding-left: 16px;
